--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
                         <div class="about__container grid">
                             <div class="about__data switch-web">
                                 <h2 class=" about__title">
-                                    Our focus is on providing high-quality electricity supply services to multifamily
+                                    Our focus is on providing high-quality electricity and natural gas supply services
+                                    to multifamily
                                     and commercial properties across New York. With a keen eye on the evolving energy
                                     landscape, we offer both fixed and indexed products, tailored to meet the diverse
                                     needs of our clients.
@@ -119,7 +120,8 @@
 
                             <div class="about__data switch-mobile">
                                 <h2 class=" about__title">
-                                    Our focus is on providing high-quality electricity supply services to multifamily
+                                    Our focus is on providing high-quality electricity and natural gas supply services
+                                    to multifamily
                                     and commercial properties across New York. With a keen eye on the evolving energy
                                     landscape, we offer both fixed and indexed products, tailored to meet the diverse
                                     needs of our clients.
@@ -308,7 +310,7 @@
 
                         <ul class="footer__data">
                             <li class="footer__information">125 Park Ave, </li>
-                            <li class="footer__information">25th Floor,NY,</li>
+                            <li class="footer__information">25th Floor NewYork,</li>
                             <li class="footer__information">NY 10017</li>
                         </ul>
                     </div>
