--- a/index.html
+++ b/index.html
@@ -309,9 +309,10 @@
                         <h3 class="footer__title">Our Address</h3>
 
                         <ul class="footer__data">
-                            <li class="footer__information">125 Park Ave, </li>
-                            <li class="footer__information">25th Floor NewYork,</li>
-                            <li class="footer__information">NY 10017</li>
+                            <li class="footer__information">125 Park Ave, 25th FloorNY,
+                                NY 10017 </li>
+                            <li class="footer__information">125 Park Ave, 25th Floor</li>
+                            <li class="footer__information">New York, NY 10017</li>
                         </ul>
                     </div>
 
